- Fixed the crash during processing empty custom images